--- a/client/lab_5/styles.css
+++ b/client/lab_5/styles.css
@@ -4,12 +4,17 @@
   box-sizing: border-box;
 }
 
+html {
+  height: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: ‘Segoe UI’, Candara, ‘Bitstream Vera Sans’, ‘DejaVu Sans’,
     ‘Bitsream Vera Sans’, ‘Trebuchet MS’, Verdana, ‘Verdana Ref’, sans-serif;
-  background-color: darkslategray;
+  background-color: lightsalmon;
+  height:100%;
 }
 
 /* Page Layout */
@@ -24,4 +29,18 @@ body {
 .container {
   max-width: 960px;
   margin-top: 25px;
+}
+
+.my-form {
+  background-color:white;
+  padding:30px;
+  border-radius:20px;
+  border: 2px solid orangered;
+}
+
+.header-type {
+  background-color:white;
+  padding:20px;
+  border-radius:20px;
+  margin-bottom:20px;
 }
